Scratchpad styling issues fixed
scratchpad remove icon
scratchpad horizontal scroll

--- a/app/scripts/superdesk-items-common/styles/media-archive.less
+++ b/app/scripts/superdesk-items-common/styles/media-archive.less
@@ -500,7 +500,7 @@
 @sfbox_sidepadding : 5px;
 @sfbox_minHeight : 225px;
 @sfbox_minWidth : 140px;
-@sfbox_mediaMaxWidth: 220px;
+@sfbox_mediaMaxWidth : 220px;
 
 	.media-box-generic () {
 		height:auto;
@@ -559,6 +559,7 @@
 				max-width: @sfbox_minWidth;
 				font-size: 12px;
 				font-style: italic;
+				white-space: normal;
 			}
 			small {
 				display: block;
