--- a/app/styles/less/sf_additional.less
+++ b/app/styles/less/sf_additional.less
@@ -991,7 +991,7 @@
 /* scratchpad */
 
 
-@scratchpad-content-height : 245px;
+@scratchpad-content-height : 285px;
 
 .scratchpad {
 	width:100%;
@@ -1085,26 +1085,37 @@
 		height:@scratchpad-content-height;
 		background-color:rgb(195,195,195);
 		background-color:rgba(195,195,195,0.8);
-		padding:10px 10px 10px 10px;
+		padding:10px 5px;
 		overflow:hidden;
+		.media-box {
+			margin: 1px 1px 6px 12px; 
+		}
 	}
-}
 
-.scratchpad-row {
-	.box-sizing(border-box);
-	width:100%;
-	height:auto;
-	padding: 5px 80px;
-}
+	.scratchpad-items {
+		display: block;
+		width: 100%;
+		white-space: nowrap;
+		overflow-x: auto;
 
-.scratchpad-open-padding {
-	width:100%;
-	height:240px; //.scratchpad.header + @scratchpad-content-height + 9 
-	display:block;
-	position:relative;
-	float:left;
-	&.closed {
-		height:40px;   //.scratchpad.header  + 9 
+		&::-webkit-scrollbar {
+	      background: #eee;
+	      &:hover {
+	        background: #fff;
+	      }
+	    }
+	    &::-webkit-scrollbar-thumb {
+	      background: #666;
+	      &:hover {
+	        background: #333;
+	      }
+	    }
+
+
+		> div {
+			float: none !important;
+			display: inline-block;
+		}
 	}
 }
 
