--- a/app/styles/less/sprites.less
+++ b/app/styles/less/sprites.less
@@ -59,7 +59,7 @@
 .icon-file               { background-position: -24px  -24px; }
 .icon-time               { background-position: -48px  -24px; }
 .icon-scratchpad-add     { background-position: -73px  -24px; }
-.icon-download-alt       { background-position: -96px  -24px; }
+.icon-scratchpad-remove  { background-position: -96px  -24px; }
 .icon-download           { background-position: -120px -24px; }
 .icon-upload             { background-position: -144px -24px; }
 .icon-inbox              { background-position: -168px -24px; }
@@ -165,7 +165,7 @@
 .icon-bullhorn           { background-position: -24px  -144px; }
 .icon-bell               { background-position: -48px  -144px; }
 .icon-certificate        { background-position: -72px  -144px; }
-.icon-thumbs-up          { background-position: -96px  -144px; }
+.icon-download-alt       { background-position: -96px  -144px; }
 .icon-thumbs-down        { background-position: -120px -144px; }
 .icon-hand-right         { background-position: -144px -144px; }
 .icon-hand-left          { background-position: -168px -144px; }
